--- a/Cowkiller.vcxproj
+++ b/Cowkiller.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\model.cpp" />
     <ClCompile Include="src\shader_program.cpp" />
+    <ClCompile Include="src\texture.cpp" />
     <ClCompile Include="src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -615,6 +616,7 @@
     <ClInclude Include="include\mesh.hpp" />
     <ClInclude Include="include\model.hpp" />
     <ClInclude Include="include\shader_program.hpp" />
+    <ClInclude Include="include\texture.hpp" />
     <ClInclude Include="include\window.hpp" />
   </ItemGroup>
   <ItemGroup>
